# Automated

./: README.md  app.py  augmented_data.py  convert_to_jsonl.py  document_converter.py  instructions.md  pyproject.toml  requirements.txt  segment_extract_text.py  text_preprocessor.py  use_cases.py
static/: script.js  style.css
templates/: completed.html  index.html
